# dashboard

./: pyproject.toml
config/: settings.py  urls.py
cool/static_src/: package-lock.json  package.json  tailwind.config.js
data/: login.py  urls.py  views.py
templates/: index.html
visual/static/img/Aguaazul/: Rebranding Aguaazul.ai
visual/static_src/: package-lock.json  package.json  tailwind.config.js
visual/templates/: base.html
